kubernetes/home.vijayakumar.xyz/core/authentik/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  namespace: authentik
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`auth.home.vijayakumar.xyz`)
      kind: Rule
      services:
        - name: authentik-app
          port: 9000
  tls:
    secretName: home-vijayakumar-xyz
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authentik-auth-proxy
  namespace: authentik
spec:
  forwardAuth:
    address: http://ak-outpost-authentik-embedded-outpost.authentik.svc.cluster.local:9000/outpost.goauthentik.io/auth/traefik
    trustForwardHeader: true
    authResponseHeaders:
      - X-authentik-username
      - X-authentik-groups
      - X-authentik-email
      - X-authentik-name
      - X-authentik-uid
      - X-authentik-jwt
      - X-authentik-meta-jwks
      - X-authentik-meta-outpost
      - X-authentik-meta-provider
      - X-authentik-meta-app
      - X-authentik-meta-version
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik
  namespace: authentik
  annotations:
    tailscale.com/funnel: 'true'
spec:
  ingressClassName: tailscale
  tls:
    - hosts: [authentik]
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authentik-app
                port:
                  number: 9000
